[package]
name = "stm32-uart-loader"
version = "0.1.0"
authors = ["ryan <ryan@kurte.nz>"]
edition = "2018"

[features]
util = [ "serial-unix", "serial-core", "structopt" ]
default = [ "util" ]

[dependencies]
structopt = { version = "0.3.11", optional = true }
serial-unix = { version = "0.4.0", optional = true }
serial-core = { version = "0.4.0", optional = true }


[[bin]]
name = "stm32-uart-loader"
path = "src/main.rs"
required-features = [ "util" ]

