[package]
name = "stm32-uart-loader"
description = "Library and utility for interacting with the STM32 factory UART bootloader"
repository = "https://github.com/ryankurte/rust-stm32-uart-loader"
version = "0.1.2"
authors = ["ryan <ryan@kurte.nz>"]
edition = "2018"
license = "MPL-2.0"

[features]
linux = [ "linux-embedded-hal", "anyhow" ]
util = [ "linux", "structopt", "simplelog", "hex", "bytefmt", "indicatif" ]
default = [ "util" ]

[dependencies]
embedded-hal = "0.2.3"
serial-core = "0.4.0"
nb = "1.0.0"
log = "0.4.8"
thiserror = "1.0.23"

structopt = { version = "0.3.14", optional = true }
linux-embedded-hal = { version = "0.3.0", optional = true }

simplelog = { version = "0.9.0", optional = true }
hex = { version = "0.4.2", optional = true }
bytefmt = { version = "0.1.7", optional = true }
anyhow = { version = "1.0.38", optional = true }
indicatif = { version = "0.16.1", optional = true }



[[bin]]
name = "stm32-loader"
path = "src/main.rs"
required-features = [ "util" ]

